[package]
name = "thunderdb"
version = "0.3.0"
edition = "2024"
description = "A minimal, embedded, transactional key-value database engine"
license = "MIT"
repository = "https://github.com/cyoab/thunderdb"
keywords = ["database", "key-value", "embedded", "storage", "btree"]
categories = ["database-implementations", "data-structures"]

[features]
default = []
io_uring = ["dep:io-uring"]
# Skip data checksums for maximum performance (trust filesystem for integrity)
no_checksum = []
# Enable failpoint injection for crash safety testing
failpoint = []

[dependencies]
libc = "0.2.178"
crc32fast = "1.5"
nix = { version = "0.29", features = ["fs", "uio"] }
rayon = "1.11"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }

[dev-dependencies]
tempfile = "3.15"
rand = "0.8"
